<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/android_lar"
    android:layout_width="360dp"
    android:layout_height="800dp"
    android:background="#FFFF"
    android:clipToOutline="true"
    tools:context=".Admin">

    <ImageView
        android:id="@+id/adm_1"
        android:layout_width="225dp"
        android:layout_height="225dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/adm_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/tvlog1"
        android:layout_width="292dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/login_to_yo"
        android:textAppearance="@style/login_to_yo"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/edtemail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adm_1"
        app:layout_constraintVertical_bias="0.071"
        tools:ignore="UnknownId" />

    <EditText
        android:id="@+id/edtemail"
        android:layout_width="295dp"
        android:layout_height="38dp"
        android:layout_marginBottom="380dp"
        android:background="@drawable/rectext1"
        android:inputType="text"
        android:text="@string/email"
        android:textAppearance="@style/email"
        android:textColor="#949494"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtpassw"
        android:layout_width="297dp"
        android:layout_height="35dp"
        android:background="@drawable/rectext1"
        android:ems="10"
        android:inputType="text"
        android:text="@string/password"
        android:textAppearance="@style/password"
        android:textColor="#949494"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtemail"
        app:layout_constraintVertical_bias="0.104" />

    <TextView
        android:id="@+id/forgot_your"
        android:layout_width="174dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/poppins"
        android:gravity="center_horizontal|top"
        android:text="@string/forgot_your"
        android:textAppearance="@style/forgot_your"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.945" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="304dp"
        android:layout_height="44dp"
        android:background="@drawable/rectsignup"
        android:text="@string/login"
        android:textAppearance="@style/login"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.763" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="169dp"
        android:layout_height="30dp"
        android:text="@string/don_t_have_"
        android:textAppearance="@style/don_t_have_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.298"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.862" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="122dp"
        android:layout_height="32dp"
        android:text="@string/sing_up"
        android:textAppearance="@style/sing_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.861" />


</androidx.constraintlayout.widget.ConstraintLayout>